--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
+@import "fumadocs-ui/css/shadcn.css";
 @import "fumadocs-ui/css/preset.css";
+@import 'fumadocs-twoslash/twoslash.css';
 @import 'fumadocs-ui/css/shadcn.css';
 
 @theme inline {
